--- a/src/imageserver/templates/list.html
+++ b/src/imageserver/templates/list.html
@@ -116,6 +116,9 @@
 			{% endif %}
 		{% else %}
 			<div class="grid">
+				<div class="grid-row even">
+					&nbsp;
+				</div>
 				<div class="grid-row odd">
 					Sorry, this folder does not exist.
 				</div>
