--- a/src/imageserver/admin/templates/admin_group_edit.html
+++ b/src/imageserver/admin/templates/admin_group_edit.html
@@ -140,7 +140,7 @@
 		{% if not group %}
 			Available after your new group has been created.
 		{% elif group.id == GROUP_ID_PUBLIC %}
-			This is a special group used to set the permissions for public<br>
+			This is a special group that is used to set the permissions for public<br>
 			(anonymous, not logged in) image requests.
 		{% else %}
 			<div>
