--- a/src/imageserver/admin/templates/admin_trace_permissions.html
+++ b/src/imageserver/admin/templates/admin_trace_permissions.html
@@ -24,15 +24,18 @@
 	{{ super() }}
 
 	{% if err_msg %}
-		<br/>
-		<div class="error">{{ err_msg|newlines }}</div>
+		<p class="error">
+			{{ err_msg|newlines }}
+		</p>
 	{% else %}
-		<div class="tall">
-			For folder: &nbsp;{{ folder.path }}<br/>
-			Trace permissions for user: &nbsp;
-			{% set select_message = 'Public (anonymous) users' %}
-			{% include "admin_inc_user_select.html" %}
-		</div>
+		<p>
+			<fieldset class="inline_form">
+				For folder: &nbsp;{{ folder.path }}<br/>
+				Trace permissions for user: &nbsp;
+				{% set select_message = 'Public (anonymous) users' %}
+				{% include "admin_inc_user_select.html" %}
+			</fieldset>
+		</p>
 		
 		{% from "admin_inc_permissions.html" import access_level_name, access_level_bullets with context %}
 		
@@ -55,7 +58,6 @@
 			</tr>
 		{%- endmacro %}
 		
-		<br/>
 		<div id="trace_container">
 			<p>
 				<h3>Public folder permissions</h3>
