Documentation fixes and tidies

--- a/src/imageserver/admin/templates/admin_user_list.html
+++ b/src/imageserver/admin/templates/admin_user_list.html
@@ -29,10 +29,10 @@
 
 	<p>
 		The users list shows who is able to log into the image server, either via the login page
-		or the programmatic API. Logged in users can browse the image repository, and upload new
-		images, run reports, and perform administrative functions if their permissions allow.
-		A user typically belongs to one or more groups, with access permissions being defined
-		at the group level.
+		or via the programmatic API. Logged in users can browse the image repository, and upload
+		new images, run reports, and perform administrative functions if their permissions allow.
+		A user typically belongs to one or more groups, with their access permissions coming from
+		the groups.
 	</p>
 	
 	<table class="list_table" summary="Listing of {{ page_heading }}">
