--- a/src/imageserver/admin/templates/admin_folder_permissions.html
+++ b/src/imageserver/admin/templates/admin_folder_permissions.html
@@ -66,7 +66,7 @@
 
 		<div class="section">			
 			<p>
-				<h3>Selection</h3>
+				<h3>Folder selection</h3>
 				<span class="tall">
 					You are viewing permissions for:<br/>
 					<fieldset class="inline_form">
