Add the application overview (part 1)

--- a/src/imageserver/templates/base.html
+++ b/src/imageserver/templates/base.html
@@ -16,6 +16,7 @@
 				&nbsp;|&nbsp;&nbsp;
 				<div id="help_action_menu" class="action_menu border shadow fix_right">
 					<ul>
+						<li><a href="{{ url_for('overview_help') }}">Application overview</a></li>
 						<li><a href="{{ url_for('image_help') }}">Imaging user's guide</a></li>
 						<li><a href="{{ url_for('api.api_help') }}">REST API user's guide</a></li>
 						<li class="spacer">&nbsp;</li>
