--- a/src/imageserver/static/styles/playground.css
+++ b/src/imageserver/static/styles/playground.css
@@ -23,3 +23,50 @@
 	Last Changed:  $Date$ $Rev$ by $Author$
 */
 
+h2 {
+	margin-top: 0px;
+}
+
+.scroller {
+	box-sizing: border-box;
+	width: 100%;
+	height: 185px;
+	white-space: nowrap;
+	overflow: auto;
+}
+.pg_selection {
+	max-height: 235px;
+	transition: max-height 1s ease-out;
+	overflow: hidden;
+}
+.pg_selection.selected {
+	max-height: 0px;
+	transition: max-height 1s ease-out;
+}
+.pg_selection ul {
+	margin: 0;
+	padding: 0;
+}
+.pg_selection li {
+	display: inline-block;
+	list-style-type: none;
+}
+.pg_selection a {
+	border: none;
+}
+.pg_selection img {
+	margin: 0.5em 0.6em 0.5em 0;
+	width: 150px;
+}
+.pg_selection li:first-child img {
+	margin-left: 0.6em;
+}
+
+.pg_main {
+	margin-top: 1em;
+	transition: margin-top 1s ease-out;
+}
+.pg_main.selected {
+	margin-top: 0em;
+	transition: margin-top 1s ease-out;
+}
