--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -23,24 +23,49 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/playground.css') }}" type="text/css" />
 	
 	{% if settings.DEBUG %}
+	<script src="{{ url_for('static', filename='js/common_view.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/playground.js') }}" type="text/javascript"></script>
 	{% else %}
+	<script src="{{ url_for('static', filename='js/common_view.min.js') }}" type="text/javascript"></script>
 	<script src="{{ url_for('static', filename='js/playground.min.js') }}" type="text/javascript"></script>
 	{% endif %}
 {% endblock %}
 
 {% block body %}
 
-	<h2>Imaging demos</h2>
 	{% if err_msg %}
 		<br/>
 		<div class="error">{{ err_msg|newlines }}</div>
 	{% else %}
-		<p>
-		{% for img_src in image_list %}
-			<img src="{{ url_for_thumbnail(img_src) }}"><br>
-		{% endfor %}
-		</p>
+		{# Image selection area #}
+
+		{% if image_list|length > 1 %}
+			<div id="pg_selection" class="pg_selection">
+				<h2>Select an image</h2>
+				<div class="scroller inline_form">
+					<ul>
+					{% for img_src in image_list %}
+						<li>
+							<a href="#"><img src="{{ url_for_thumbnail(img_src) }}"></a>
+						</li>
+					{% endfor %}
+					</ul>
+				</div>
+			</div>
+		{% else %}
+			<script type="text/javascript">
+			Playground.selectImage('{{ url_for_thumbnail(image_list.0) }}');
+			</script>
+		{% endif %}
+
+		{# Selected image playground #}
+
+		<div id="pg_main" class="pg_main">
+			<h2>Image playground
+				<span id="pg_reselect" class="hidden">(<a href="#">select a different image</a>)</span>
+			</h2>
+			<div id="dostuff"></div>
+		</div>
 	{% endif %}
 
 {% endblock %}
