--- a/src/imageserver/templates/playground.html
+++ b/src/imageserver/templates/playground.html
@@ -32,13 +32,11 @@
 {% endblock %}
 
 {% block body %}
-
 	{% if err_msg %}
 		<br/>
 		<div class="error">{{ err_msg|newlines }}</div>
 	{% else %}
-		{# Image selection area #}
-
+		{# Image selection area - when there are multiple demo images #}
 		{% if image_list|length > 1 %}
 			<div id="pg_selection" class="pg_selection">
 				<h2>Select an image</h2>
@@ -46,26 +44,79 @@
 					<ul>
 					{% for img_src in image_list %}
 						<li>
-							<a href="#"><img src="{{ url_for_thumbnail(img_src) }}"></a>
+							<a href="javascript:void(0)"><img src="{{ url_for_thumbnail(img_src) }}"></a>
 						</li>
 					{% endfor %}
 					</ul>
 				</div>
 			</div>
-		{% else %}
+		{% endif %}
+
+		{# Selected image playground #}
+		<div id="pg_main" class="pg_main">
+			<h2>Image playground
+				<span id="pg_reselect" class="hidden">(<a href="javascript:void(0)">select a different image</a>)</span>
+			</h2>
+			<div class="column col1">
+				<h3>Control panel</h3>
+				<div class="controls">
+					<br>
+					<div>
+						<label>Start again</label>
+						<fieldset class="inline_form">
+							<button type="button" onclick="Playground.reset()">Reset</button>
+						</fieldset>
+					</div>
+					<br>
+					<div>
+						<label>Dimensions</label>
+						<fieldset class="inline_form">
+							<button type="button" onclick="Playground.play({width: 0, height: 0})">Original size</button><br>
+							<button type="button" onclick="Playground.play({width: 200, height: 200})">Small square</button>
+							<button type="button" onclick="Playground.play({width: 500, height: 500})">Medium square</button>
+							<button type="button" onclick="Playground.play({width: 1000, height: 1000})">Large square</button><br>
+							<button type="button" onclick="Playground.play({width: 200, height: 150})">Small landscape</button>
+							<button type="button" onclick="Playground.play({width: 500, height: 375})">Medium landscape</button>
+							<button type="button" onclick="Playground.play({width: 1000, height: 750})">Large landscape</button><br>
+							<button type="button" onclick="Playground.play({width: 150, height: 200})">Small portrait</button>
+							<button type="button" onclick="Playground.play({width: 375, height: 500})">Medium portrait</button>
+							<button type="button" onclick="Playground.play({width: 750, height: 1000})">Large portrait</button>
+						</fieldset>
+					</div>
+					<div>
+						<label>Borders</label>
+						<fieldset class="inline_form">
+							<input id="autosizefit" type="checkbox" value="1" onchange="Playground.play({autosizefit: this.checked})">
+							<label for="autosizefit">Remove border</label><br>
+							TODO some more
+						</fieldset>
+					</div>
+				</div>
+			</div>
+
+			<div class="sticky column col2">
+				<h3>Image preview</h3>
+				<div class="preview odd">
+					<img id="wait_image" src="{{ url_for('static', filename='images/icon-wait-64.gif') }}">
+					<img id="preview_image" src="{{ url_for('static', filename='images/spacer.png') }}">
+				</div>
+				<h3>Image actions</h3>
+				<div class="actions">
+					<fieldset class="inline_form">
+						TODO View actual size<br>
+						TODO Download image<br>
+						TODO View as PDF<br>
+					</fieldset>
+				</div>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+		{# Set the image selection - when there is only 1 demo image #}
+		{% if image_list|length == 1 %}
 			<script type="text/javascript">
 			Playground.selectImage('{{ url_for_thumbnail(image_list.0) }}');
 			</script>
 		{% endif %}
-
-		{# Selected image playground #}
-
-		<div id="pg_main" class="pg_main">
-			<h2>Image playground
-				<span id="pg_reselect" class="hidden">(<a href="#">select a different image</a>)</span>
-			</h2>
-			<div id="dostuff"></div>
-		</div>
 	{% endif %}
-
 {% endblock %}
